--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-REACT_APP_BACKEND_URL_PROD=https://api.fortureplasticos.com.br
-REACT_APP_BACKEND_URL=http://localhost:3334
-NODE_ENV=laa
+REACT_APP_BACKEND_URL=https://api.fortureplasticos.com.br/api
+APP_NAME=Molfas
