--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-country-flag": "^2.1.0",
     "react-dom": "^16.13.1",
     "react-hooks": "^1.0.1",
+    "react-i18next": "^11.7.0",
     "react-icons": "^3.9.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.0",
